# esp32s3-lcd-restaurant

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/espressif__esp32_s3_lcd_ev_board/: idf_component.yml
components/espressif__esp_lcd_touch_gt1151/: .component_hash
components/lvgl__lvgl/demos/widgets/: lv_demo_widgets.c  lv_demo_widgets.h
components/lvgl__lvgl/env_support/cmsis-pack/: LVGL.lvgl.pdsc
main/: CMakeLists.txt  lv_demos.h  main.c
main/widgets/: lv_demo_widgets.h  lv_widgets.c  lv_widgets.h  lv_widgets.py
main/widgets/assets/: img_clothes.c  img_demo_widgets_avatar.c  img_lvgl_logo.c  table_top_view.c
